--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# ProgrammingForDS\n",
     "\n",
-    "> API details."
+    "> This is a test module for nbdev"
    ]
   },
   {
@@ -190,10 +190,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-fa191d882e21>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-11-fa191d882e21>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-12-fa191d882e21>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    console_scripts = nbdev_build_lib = nbdev.cli:nbdev_build_lib\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-fa191d882e21>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    console_scripts = nbdev_build_lib = nbdev.cli:nbdev_build_lib\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
