--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -27,7 +27,8 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from fastcore.test import *"
    ]
   },
   {
@@ -179,26 +180,9 @@
     }
    ],
    "source": [
+    "#hide\n",
     "from nbdev.export import *\n",
     "notebook2script()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-fa191d882e21>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-fa191d882e21>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    console_scripts = nbdev_build_lib = nbdev.cli:nbdev_build_lib\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "console_scripts = nbdev_build_lib = nbdev.cli:nbdev_build_lib"
    ]
   },
   {
