--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# ProgrammingForDS\n",
     "\n",
-    "> This is a test module for nbdev"
+    "> This is a test module for nbdev that finds numbers in a text and gives back the sum."
    ]
   },
   {
@@ -38,131 +38,16 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def say_hello(to):\n",
-    "    \"Say hello to somebody\"\n",
-    "    return f'Hello {to}!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello Brenda!'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "say_hello('Brenda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import display,SVG\n",
-    "display(SVG('<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert say_hello(\"Jeremy\")==\"Hello Jeremy!\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "class HelloSayer:\n",
-    "    \"Say hello to `to` using `say_hello`\"\n",
-    "    def __init__(self, to): self.to = to\n",
+    "def number_sum(text):\n",
     "\n",
-    "    def say(self):\n",
-    "        \"Do the saying\"\n",
-    "        return say_hello(self.to)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "<h4 id=\"HelloSayer.say\" class=\"doc_header\"><code>HelloSayer.say</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
-       "\n",
-       "> <code>HelloSayer.say</code>()\n",
-       "\n",
-       "Do the saying"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "show_doc(HelloSayer.say)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello Alexis!'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o = HelloSayer(\"Alexis\")\n",
-    "o.say()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"Say hello to `to` using `say_hello`\""
+    "    for line in text:\n",
+    "        y = re.findall(\"[0-9]+\", text)\n",
+    "    \n",
+    "    sums = 0 \n",
+    "    for list in y:\n",
+    "        number = int(list)\n",
+    "        sums = sums + number\n",
+    "    print('The total is:', sums)"
    ]
   },
   {
@@ -175,6 +60,7 @@
      "output_type": "stream",
      "text": [
       "Converted 00_core.ipynb.\n",
+      "Converted Finding Numbers in a Haystack.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
