--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -48,6 +48,7 @@
    "source": [
     "#export\n",
     "def number_sum(text):\n",
+    "    import re\n",
     "    for line in text:\n",
     "        y = re.findall(\"[0-9]+\", text)   \n",
     "    sums = 0 \n",
