--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "import ProgrammingForDS"
+    "from ProgrammingForDS.core import *"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some examples:"
+    "Here is an example:"
    ]
   },
   {
@@ -662,7 +662,6 @@
     }
    ],
    "source": [
-    "import re\n",
     "File = open(\"regex_sum_928284.txt\", 'r')\n",
     "text = File.read()\n",
     "File.close()\n",
@@ -675,27 +674,16 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'number_sum' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-78b268326214>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnumber_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'number_sum' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total is: 390829\n"
      ]
     }
    ],
    "source": [
     "number_sum(text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
