--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -24,8 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ProgrammingForDS\n",
-    "\n",
+    "# Numbers in text\n",
     "> This is a test module for nbdev that finds numbers in a text and gives back the sum."
    ]
   },
