--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
+    "\n",
     "def number_sum(text):\n",
     "    import re\n",
     "    for line in text:\n",
@@ -59,7 +60,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "\n",
+    "def lettermax(text):\n",
+    "    \n",
+    "    counts = dict()\n",
+    "\n",
+    "    for line in text:\n",
+    "        words = line.split()\n",
+    "        for word in words:\n",
+    "            counts[word] = counts.get(word, 0) + 1\n",
+    "\n",
+    "    bigcount = None\n",
+    "    bigword = None\n",
+    "    for word, count in list(counts.items()):\n",
+    "        if bigcount is None or count > bigcount:\n",
+    "            bigword = word\n",
+    "            bigcount = count\n",
+    "\n",
+    "    print('The letter used the most is: ',bigword, ', it was used used: ', bigcount, ' times.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -76,13 +104,6 @@
     "from nbdev.export import *\n",
     "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -90,6 +111,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
