--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -80,6 +80,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "\n",
+    "def numwords(text):\n",
+    "    count = 0\n",
+    "    for word in text:\n",
+    "        count += 1\n",
+    "    print(\"Total number of words is:\", count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
